--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,3 +71,98 @@ h1 a:hover,
 h1 a:focus {
     color: #ece7e6;
 }
+
+/* Home Page Styles */
+
+.home {
+    max-width: 350px;
+    width: 300px;
+    color: #20232E;
+    text-align: center;
+    padding: 1em 0;
+    margin: auto;
+}
+
+.logo {
+    display: block;
+    width: 250px;
+    height: 273px;
+    margin: 0 auto 1.5em;
+    border-bottom-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+
+.home > h2 {
+    font-size: 2rem;
+    margin-bottom: 1.25em;
+}
+
+input[type="text"] {
+    max-width: 300px;
+    padding: .75em;
+    margin: .25em auto;
+    background-color: #ffffff80;
+    border-radius: 4px;
+    border: none;
+    font-size: 1.6rem;
+    text-align: center;
+    color: #2D232E;
+}
+
+input[type="text"]:hover,
+input[type="text"]:focus {
+    background-color: #ef798a4d;
+    border: none;
+}
+
+.input-label {
+    font-size: 1.5rem;
+    background-color: transparent;
+}    
+
+/* Styling for Error Messages */
+.feedback {
+    max-width: 300px;
+    width: 250px;
+    font-family: "Poppins", sans-serif;
+    font-style: italic;
+    font-size: 1.6rem;
+    color: #f13f59;
+    margin: .5em auto .75em;
+}
+
+/* General Styling for all buttons */
+.btn {
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(45, 35, 46, .5);
+    cursor: pointer;
+}
+
+/* Styling for Start(Let's Football) and Results Buttons */
+input[type="button"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.btn-start, 
+.btn-submit {
+    color: #fff;
+    background-color: #673ee5;
+}
+
+.btn-start {
+    padding: .75em 1.75em;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.btn-start:hover,
+.btn-start:focus {
+    transform: scale(1.1);
+    transition: transform 250ms;
+    font-weight: 700;
+    background-color: #7e62d1;
+    box-shadow: 0 4px 15px rgba(45, 35, 46, .8);
+}
