--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,27 +61,8 @@ header {
 h1 {
     font-size: 5rem;
     letter-spacing: 2px;
-}
-
-h1 a {
-    color: #20232E;
-}
-
-h1 a:hover,
-h1 a:focus {
-    color: #ece7e6;
-}
-
-/* Footer Styling */
-footer {
-    width: 100%;
-    height: 80px;
-    padding: .5em .5em 0;
-    margin-top: auto;
-    font-size: 1.4rem;
-    text-align: center;
-    color: #2D232E;
-    background-color: #e1830e;
+    text-transform: uppercase;
+    color: #ffffff;
 }
 
 /* Home Page Styles */
