--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,7 @@ html {
 li { list-style-type: none;}
 a {text-decoration: none;}
 
-/* Hides elements, readable by screen readers 
-https://webaim.org/techniques/css/invisiblecontent/ */
+/* Hides elements, readable by screen readers  */
 .sr-only {
     position:absolute;
     left:-10000px;
@@ -66,7 +65,6 @@ h1 {
 }
 
 /* Home Page Styles */
-
 .home {
     max-width: 350px;
     width: 300px;
